test/bad/generics/def10.px

func f<T>() def
    T x

f()
